Add AEAD support
make long-term key static

make master key static
refine encryptor info initialization
little mbedtls specific work

resize if there are not enough space for key

separate stream and aead tests
we apply greedy strategy to decryption, decrypt as much as possible,
and if we really cannot do anything, let remote send more data

thus, make cryptoneedmoreexception internal, only expose
cryptoerrorexception for outer module

drop some magic number

apply circular buffer

close connection if decryption fails

enlarge AEAD udp buffer size

init RNG if null ref

I have some question on Skip() behavior
and I already modify it to reflect my thought.

add aead enc/dec tests

add a dump method

kill magic number

fix test false positive

reset flag to expose the real failed test

enlarge buffer size

in case of buffer overflow
and check whether we are nearly get to the end of the buffer

add sodium init lock

cleanup logging

add x64 support

to gain AVX2 support in libsodium

disable AEAD sodium test until get this sorted out

always use unsigned integers

add workaround to fix MSBuild cannot find x64 host

add xchacha20-ietf-poly1305

drop out-dated script

We only need abuf length to handle first TCP request

Do NOT auto check update

It's meaningless to me.

move traffic info class into logform

replace ring buffer with blockcopy variant

replace ZXing with nuget package

add EndSend returning value check

if we haven't sent all of them, reconstruct buffer to re-send

add unsafe variant of PerfByteCopy()

Usage: enable [allow unsafe code] and define INCLUDE_UNSAFE

implement xchacha20-ietf-poly1305

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,30 @@
 version: 1.0.{build}
 image: Visual Studio 2015
-configuration:
-- Debug
-- Release
-platform: x86
+environment:
+  matrix:
+    - platform: x86
+      configuration: Debug
+    - platform: x86
+      configuration: Release
+    - platform: x64
+      configuration: Debug
+    - platform: x64
+      configuration: Release
+matrix:
+  fast_finish: false
 nuget:
   project_feed: true
 before_build:
 - cmd: nuget restore
 build:
+  parallel: true
   verbosity: normal
 artifacts:
 - path: fuckshadows-csharp\bin\x86\Release\Fuckshadows.exe
-  name: Fuckshadows-release.exe
+  name: Fuckshadows-release32.exe
 - path: fuckshadows-csharp\bin\x86\Debug\Fuckshadows.exe
-  name: Fuckshadows-debug.exe
+  name: Fuckshadows-debug32.exe
+- path: fuckshadows-csharp\bin\x64\Release\Fuckshadows.exe
+  name: Fuckshadows-release64.exe
+- path: fuckshadows-csharp\bin\x64\Debug\Fuckshadows.exe
+  name: Fuckshadows-debug64.exe
