--- a/fuckshadows-csharp/packages.config
+++ b/fuckshadows-csharp/packages.config
@@ -6,4 +6,5 @@
   <package id="GlobalHotKey" version="1.1.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="StringEx.CS" version="0.3.1" targetFramework="net462" developmentDependency="true" />
+  <package id="ZXing.Net" version="0.15.0" targetFramework="net462" />
 </packages>
